# linear_random_num_gen

./: CMakeLists.txt
app/: test_random.cpp  test_rational.cpp
include/ra/: random.hpp  rational.hpp
lib/: random.cpp
